// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-18n4smc,
[data-css-18n4smc] {
  position: relative;
  transform: translateY(-60px / 2);
  -webkit-transform: translateY(-60px / 2);
}

.css-18n4smc > div,
[data-css-18n4smc] > div {
  border-radius: 100%;
  height: 60px;
  margin: 0px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_wxokr 1s 0s linear infinite;
  left: -30px;
  opacity: 0;
  position: absolute;
  top: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_wxokr 1s 0s linear infinite;
}

<BallScaleMultiple
  loading={true}
>
  <div
    data-css-18n4smc=""
  >
    <div />
    <div />
    <div />
  </div>
</BallScaleMultiple>
`;

exports[`enzyme.render 1`] = `
.css-18n4smc,
[data-css-18n4smc] {
  position: relative;
  transform: translateY(-60px / 2);
  -webkit-transform: translateY(-60px / 2);
}

.css-18n4smc > div,
[data-css-18n4smc] > div {
  border-radius: 100%;
  height: 60px;
  margin: 0px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_wxokr 1s 0s linear infinite;
  left: -30px;
  opacity: 0;
  position: absolute;
  top: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_wxokr 1s 0s linear infinite;
}

<div
  data-css-18n4smc=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-18n4smc,
[data-css-18n4smc] {
  position: relative;
  transform: translateY(-60px / 2);
  -webkit-transform: translateY(-60px / 2);
}

.css-18n4smc > div,
[data-css-18n4smc] > div {
  border-radius: 100%;
  height: 60px;
  margin: 0px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_wxokr 1s 0s linear infinite;
  left: -30px;
  opacity: 0;
  position: absolute;
  top: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_wxokr 1s 0s linear infinite;
}

<div
  data-css-18n4smc=""
>
  <div />
  <div />
  <div />
</div>
`;
